@@ -1566,7 +1566,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches do not keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '232';
+$wgStyleVersion = '233';
 
 
 # Server-side caching:
